--- a/src/app/home/operation/new-receipt/new-receipt.component.scss
+++ b/src/app/home/operation/new-receipt/new-receipt.component.scss
@@ -11,10 +11,10 @@
 .subtable thead th {
   padding: 6px;
   font-size: 10px;
-  color: black;
+  // color: black;
 }
 
-.subtable tbody td {
+.subtable td {
   padding: 6px;
-  font-size: 10px;
+  font-size: 8px;
 }
