--- a/src/app/pm-home/pm-container-list/pm-container-list.component.html
+++ b/src/app/pm-home/pm-container-list/pm-container-list.component.html
@@ -14,15 +14,17 @@
                 <label class="form-label-ddl">Location</label>
             </div>
         </div>
-        <div class="col-md-3 mt-4">
+        <div class="col-md-4 mt-4">
             <button class="form-btn me-2" (click)="Search()">Search</button>
-            <button class="form-btn-light" (click)="Clear()">Clear</button>
+            <button class="form-btn-light" (click)="Clear()">Clear</button>&nbsp;
+            <button class="form-btn me-2" (click)="exportexcel()">Download Excel</button>
+
         </div>
     </div>
 </div>
 <div class="mt-3">
     <div class="table-responsive">
-        <table class="ratetable table-striped table-bordered" id="data-table-config">
+        <table class="ratetable table-striped table-bordered" id="data-table-config" >
             <thead>
                 <tr>
                     <th width="1%">No.</th>
