--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -30,6 +30,7 @@
                         <li><a routerLink="/home/operations/new-invoice">{{'Menu.newinvoice'|translate}}</a></li>
                         <li><a routerLink="/home/operations/credit-note">Credit Notes</a></li>
                         <li><a routerLink="/home/operations/receipt-list">Receipt</a></li>
+                        <li><a routerLink="/home/operations/vendor-bills">Vendor Bill</a></li>
 
                     </ul>
                     <ul
