--- a/src/app/pm-home/pm-container-list/pm-container-list.component.html
+++ b/src/app/pm-home/pm-container-list/pm-container-list.component.html
@@ -14,17 +14,17 @@
                 <label class="form-label-ddl">Location</label>
             </div>
         </div>
-        <div class="col-md-4 mt-4">
+        <div class="col-md-9 mt-4">
             <button class="form-btn me-2" (click)="Search()">Search</button>
             <button class="form-btn-light" (click)="Clear()">Clear</button>&nbsp;
-            <button class="form-btn me-2" (click)="exportexcel()">Download Excel</button>
+            <button class="form-btn-danger" (click)="exportexcel()">Get Inventory Report</button>
 
         </div>
     </div>
 </div>
 <div class="mt-3">
     <div class="table-responsive">
-        <table class="ratetable table-striped table-bordered" id="data-table-config" >
+        <table class="ratetable table-striped table-bordered" id="data-table-config">
             <thead>
                 <tr>
                     <th width="1%">No.</th>
@@ -61,4 +61,54 @@
             </tbody>
         </table>
     </div>
+    <table class="d-none" id="excelTable">
+        <thead>
+            <tr>
+                <th>No.</th>
+                <th>Container No</th>
+                <th>20'/40'</th>
+                <th>Leased From</th>
+                <th>On Hire Date</th>
+                <th>Current Activity</th>
+                <th>Activity Date</th>
+                <th>Status</th>
+                <th>Prev Activity</th>
+                <th>Current Location</th>
+                <th>POD</th>
+                <th>FPOD</th>
+                <th>Vessel Name</th>
+                <th>Voyage No</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let item of inventoryList1;let i = index">
+                <td>{{i +1}}</td>
+                <td>
+                    {{item.CONTAINER_NO}}
+                </td>
+                <td>{{item.CONTAINER_TYPE}}</td>
+                <td>{{item.LEASED_FROM}}</td>
+                <td>{{item.ONHIRE_DATE | date:'medium'}}</td>
+                <td>
+                    {{item.ACTIVITY}}
+                </td>
+                <td>
+                    {{item.ACTIVITY_DATE | date:'mediumDate'}}
+                </td>
+                <td>
+                    {{item.STATUS}}
+                </td>
+                <td>
+                    {{item.PREV_ACTIVITY}}
+                </td>
+                <td>
+                    {{item.LOCATION}}
+                </td>
+                <td>{{item.POD}}</td>
+                <td>{{item.FINAL_DESTINATION}}</td>
+                <td>{{item.VESSEL_NAME}}</td>
+                <td>{{item.VOYAGE_NO}}</td>
+            </tr>
+        </tbody>
+    </table>
 </div>
