--- a/src/app/home/operation/invoice-list2/invoice-list2.component.html
+++ b/src/app/home/operation/invoice-list2/invoice-list2.component.html
@@ -153,7 +153,7 @@
       <thead>
         <tr>
           <th width="1%">No</th>
-          <th width="20%">Charge</th>
+          <th width="15%">Charge</th>
           <th width="10%">HSN</th>
           <th width="5%">Qty</th>
           <th width="5%">Curr</th>
@@ -164,6 +164,7 @@
           <th class="text-end" width="5%">Rate %</th>
           <th class="text-end" width="5%">SGST</th>
           <th class="text-end" width="5%">CGST</th>
+          <th class="text-end" width="5%">IGST</th>
           <th class="text-end" width="5%">TAX</th>
           <th class="text-end" width="10%">Total Amount</th>
           <th width="4%">Action</th>
@@ -222,6 +223,7 @@
             <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.AMOUNT}}</span>
           </td>
           <td width="10%"> <input type="text" (keyup)="getTaxableAmount($event,i)"
+              [readonly]="item.value.CURRENCY == localCurrency ? true : false"
               [ngClass]="{ invalid: submitted && f.BL_LIST.controls[i].get('EXCHANGE_RATE').errors}"
               formControlName="EXCHANGE_RATE" class="form-control3" />
           </td>
@@ -247,6 +249,11 @@
             <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
               [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('CGST').errors}" formControlName="CGST" />
             <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.CGST}}</span>
+          </td>
+          <td width="5%" class="text-end">
+            <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
+              [ngClass]="{invalid: submitted && f.BL_LIST.controls[i].get('IGST').errors}" formControlName="IGST" />
+            <span *ngIf="item.value.IS_SRRCHARGE == '1'">{{item.value.IGST}}</span>
           </td>
           <td width="5%" class="text-end">
             <input class="form-control3" type="text" *ngIf="item.value.IS_SRRCHARGE != '1'"
