--- a/src/app/home/operation/new-credit-note/new-credit-note.component.html
+++ b/src/app/home/operation/new-credit-note/new-credit-note.component.html
@@ -93,8 +93,8 @@
                     <th>IGST</th>
                     <th>SGST</th>
                     <th>CGST</th>
-                    <th>Total Rate</th>
-                    <th>Credit Note</th>
+                    <th>Total Amount</th>
+                    <th>Credit Amount</th>
                     <th>Remaining Credit</th>
                 </tr>
             </thead>
@@ -111,7 +111,7 @@
                     <td>{{item.value.EXCHANGE_RATE}}</td>
                     <td>{{item.value.RATE_PER}}</td>
                     <td>{{item.value.TAXABLE_AMOUNT}}</td>
-                    <td>{{item.value.TAX_AMOUNT}}</td>
+                    <td>{{item.value.TAX_AMOUNT}} <br> </td>
                     <td>{{item.value.IGST}}</td>
                     <td>{{item.value.SGST}}</td>
                     <td>{{item.value.CGST}}</td>
