--- a/src/app/home/operation/new-bl/new-bl.component.html
+++ b/src/app/home/operation/new-bl/new-bl.component.html
@@ -271,7 +271,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 mt-4">
-                    <input type="checkbox" />
+                    <input type="checkbox" formControlName="ISGROSSCOMBINED" />
                     Apply Gross Wt & Net Wt combined
                 </div>
             </div>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
                 <div class="col-md-6 mt-4">
-                    <input type="checkbox" />
+                    <input type="checkbox" formControlName="ISGROSSCOMBINED" />
                     Apply Gross Wt & Net Wt combined
                 </div>
             </div>
